Optimzie for jdk17 (#1273)
* [feature][update] Refactor SQL query construction in GetPrimaryKeyUtil and update Maven compiler settings to JDK 17

* [feature][refactor] Improve database utility methods and enhance SQL query handling with modern Java features

* [feature][lib][storage] Update FileHelper and StorageWriterUtil to use modern Java features and improve code readability

* [feature][lib][storage Clean up unused imports in StorageWriterUtil to improve code clarity

* [feature][refactor] Clean up code by removing unused comments, improving logging messages, and enhancing readability with modern Java features

* [feature][refactor] Refactor pagination handling in HttpReader to use a record for page configuration and improve code readability

* [feature][refactor] Refactor JsonReader to improve code readability and utilize modern Java features, including enhanced error handling and column validation

* [refactor] Simplify code in FileTypeUtils, HdfsReader, MyOrcReader, and MyParquetReader by using modern Java features and improving readability

* [refactor][plugin][hdfswriter] Enhance HdfsWriter and ParquetWriter for improved readability and maint]ainability by utilizing modern Java features, including record types and switch expressions

* [refactor][plugin][hdfswriter] Simplify compression codec selection and column handling in HdfsHelper and OrcWriter using modern Java features

* [refactor][plugin][rdbmswriter] Update logger initialization in RdbmsWriter to use the correct class name for improved clarity

* [refactor][core] Replace HashSet and Arrays.asList with Set.of for SUPPORTED_WRITE_MODE, SUPPORTED_FILE_FORMAT, and SQL_RESERVED_WORDS for improved readability and performance

* [refactor][plugin][mongodbwriter] Simplify record processing and enhance readability in MongoDBWriter

* [refactor][plugin][mongodbreader] Improve query filter construction and record processing in MongoDBReader

* [refactor][plugin][kudureader] Enhance readability and structure